[gd_scene load_steps=15 format=3 uid="uid://w6mkeioqln3k"]

[ext_resource type="Script" path="res://addons/inventory-system/editor/inventory_editor.gd" id="1_hn7br"]
[ext_resource type="Script" path="res://addons/inventory-system/editor/tab_container_inventory.gd" id="2_3cl1k"]
[ext_resource type="Texture2D" uid="uid://7ueixntymdwg" path="res://addons/inventory-system/icons/new_inventory_item.svg" id="2_lu5r1"]
[ext_resource type="Texture2D" uid="uid://76umvuslxorx" path="res://addons/inventory-system/icons/inventory_item.svg" id="3_6kl7v"]
[ext_resource type="Texture2D" uid="uid://dhpnx4f2e7pwf" path="res://addons/inventory-system/icons/new_recipe.svg" id="3_clewf"]
[ext_resource type="Texture2D" uid="uid://br4lqgdunlyet" path="res://addons/inventory-system/icons/recipe.svg" id="4_20x4i"]
[ext_resource type="Texture2D" uid="uid://ilsakiynp5o7" path="res://addons/inventory-system/icons/new_craft_station_type.svg" id="4_jbtk0"]
[ext_resource type="Texture2D" uid="uid://6b7n3apcb8hy" path="res://addons/inventory-system/icons/new_item_category.svg" id="5_4w1hd"]
[ext_resource type="PackedScene" uid="uid://kuckh8lq8mwr" path="res://addons/inventory-system/editor/items/items.tscn" id="5_fwymy"]
[ext_resource type="PackedScene" uid="uid://c20tt03af3qw6" path="res://addons/inventory-system/editor/recipes/recipes.tscn" id="6_qmu8k"]
[ext_resource type="Texture2D" uid="uid://3qxo8va657qh" path="res://addons/inventory-system/icons/craft_station_type.svg" id="8_4vmnl"]
[ext_resource type="Texture2D" uid="uid://bgx18ev7eamk5" path="res://addons/inventory-system/icons/item_category.svg" id="10_86ysm"]
[ext_resource type="PackedScene" uid="uid://clj2qii0ta8lx" path="res://addons/inventory-system/editor/craft_stations/craft_stations.tscn" id="11_rrabm"]
[ext_resource type="PackedScene" uid="uid://cfevgv38d1bll" path="res://addons/inventory-system/editor/categories/categories_editor.tscn" id="12_kvj1p"]

[node name="InventoryEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_hn7br")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Toolbar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="NewButton" type="Button" parent="MarginContainer/VBoxContainer/Toolbar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
flat = true
icon_alignment = 1

[node name="OpenButton" type="MenuButton" parent="MarginContainer/VBoxContainer/Toolbar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
icon_alignment = 1

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/Toolbar"]
layout_mode = 2

[node name="NewItemButton" type="MenuButton" parent="MarginContainer/VBoxContainer/Toolbar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "New Inventory Item"
disabled = true
icon = ExtResource("2_lu5r1")
icon_alignment = 1
item_count = 2
popup/item_0/text = "New Item With New Resource"
popup/item_0/id = 100
popup/item_1/text = "New Item With Existing Resource"
popup/item_1/id = 101

[node name="VSeparator2" type="VSeparator" parent="MarginContainer/VBoxContainer/Toolbar"]
layout_mode = 2

[node name="NewRecipeButton" type="MenuButton" parent="MarginContainer/VBoxContainer/Toolbar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "New Recipe"
disabled = true
icon = ExtResource("3_clewf")
icon_alignment = 1
item_count = 2
popup/item_0/text = "New Recipe With New Resource"
popup/item_0/id = 100
popup/item_1/text = "New Recipe With Existing Resource"
popup/item_1/id = 101

[node name="VSeparator3" type="VSeparator" parent="MarginContainer/VBoxContainer/Toolbar"]
layout_mode = 2

[node name="NewCraftStationTypeButton" type="MenuButton" parent="MarginContainer/VBoxContainer/Toolbar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "New Craft Station Type"
disabled = true
icon = ExtResource("4_jbtk0")
icon_alignment = 1
item_count = 2
popup/item_0/text = "New Craft Station Type With New Resource"
popup/item_0/id = 100
popup/item_1/text = "New Craft Station Type With Existing Resource"
popup/item_1/id = 101

[node name="SaveAllButton" type="Button" parent="MarginContainer/VBoxContainer/Toolbar"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
flat = true
icon_alignment = 1

[node name="VSeparator4" type="VSeparator" parent="MarginContainer/VBoxContainer/Toolbar"]
layout_mode = 2

[node name="NewItemCategoryButton" type="MenuButton" parent="MarginContainer/VBoxContainer/Toolbar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "New Item Category"
disabled = true
icon = ExtResource("5_4w1hd")
icon_alignment = 1
item_count = 2
popup/item_0/text = "New Item Category With New Resource"
popup/item_0/id = 100
popup/item_1/text = "New Item Category With Existing Resource"
popup/item_1/id = 101

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/Toolbar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Open a InventoryDatabase resource to see contents here"
vertical_alignment = 2
text_overrun_behavior = 1
structured_text_bidi_override = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Toolbar"]
visible = false
layout_mode = 2
text = "Database: "
horizontal_alignment = 2

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/Toolbar"]
visible = false
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
item_count = 2
popup/item_0/text = "dsadasdsa"
popup/item_0/id = 0
popup/item_1/text = "dadsadsa"
popup/item_1/id = 1

[node name="MenuBar" type="MenuBar" parent="MarginContainer/VBoxContainer/Toolbar"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="Content" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_right = 4

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer/Content"]
layout_mode = 2
mouse_filter = 2
script = ExtResource("2_3cl1k")
items_icon = ExtResource("3_6kl7v")
recipes_icon = ExtResource("4_20x4i")
craft_station_types_icon = ExtResource("8_4vmnl")
categories_icon = ExtResource("10_86ysm")

[node name="Items" parent="MarginContainer/VBoxContainer/Content/TabContainer" instance=ExtResource("5_fwymy")]
layout_mode = 2
mouse_filter = 1

[node name="Recipes" parent="MarginContainer/VBoxContainer/Content/TabContainer" instance=ExtResource("6_qmu8k")]
unique_name_in_owner = true
visible = false
layout_mode = 2
mouse_filter = 1

[node name="Craft Stations" parent="MarginContainer/VBoxContainer/Content/TabContainer" instance=ExtResource("11_rrabm")]
visible = false
layout_mode = 2
mouse_filter = 1

[node name="Categories" parent="MarginContainer/VBoxContainer/Content/TabContainer" instance=ExtResource("12_kvj1p")]
visible = false
layout_mode = 2
mouse_filter = 1

[node name="NewDialog" type="FileDialog" parent="."]
dialog_hide_on_ok = true
access = 2
filters = PackedStringArray("*.tres ; InventoryDatabase")

[node name="SaveDialog" type="FileDialog" parent="."]
size = Vector2i(312, 157)
dialog_hide_on_ok = true
filters = PackedStringArray("*.inv ; Inventory")

[node name="OpenDialog" type="FileDialog" parent="."]
title = "Open a File"
size = Vector2i(312, 157)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
filters = PackedStringArray("*.tres ; InventoryDatabase")

[connection signal="theme_changed" from="." to="." method="_on_theme_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Toolbar/NewButton" to="." method="_on_new_button_pressed"]
[connection signal="about_to_popup" from="MarginContainer/VBoxContainer/Toolbar/OpenButton" to="." method="_on_open_button_about_to_popup"]
[connection signal="data_changed" from="MarginContainer/VBoxContainer/Content/TabContainer/Items" to="MarginContainer/VBoxContainer/Content/TabContainer/Recipes" method="_on_data_changed"]
[connection signal="data_changed" from="MarginContainer/VBoxContainer/Content/TabContainer/Craft Stations" to="MarginContainer/VBoxContainer/Content/TabContainer/Recipes" method="_on_data_changed"]
[connection signal="file_selected" from="NewDialog" to="." method="_on_new_dialog_file_selected"]
[connection signal="file_selected" from="OpenDialog" to="." method="_on_open_dialog_file_selected"]
